# slasolve

./: .auto-fix-bot.yml  .gitignore  AUTO_FIX_BOT_GUIDE.md  CHANGELOG.md  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  DELEGATION_WORKFLOW.md  DIRECTORY_STRUCTURE.md  GHAS_IMPLEMENTATION_SUMMARY.md  MONITORING_GUIDE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_VALIDATION_REPORT.md  PRODUCTION_READINESS.md  README.md  ROOT_README.md  SECURITY.md  SECURITY_SUMMARY.md  auto-fix-bot-dashboard.html  auto-fix-bot.prompt.yml  auto-fix-bot.yml  deploy.sh  docker-compose.yml  nginx.conf  package-lock.json  package.json
.devcontainer/: CHANGELOG.md  Dockerfile  KB.md  QUICK_START.md  README.md  SOLUTION_SUMMARY.md  TEST-GUIDE.md  devcontainer.json  docker-compose.dev.yml  docker-compose.yml  install-optional-tools.sh  life-system-README.md  post-create.sh  post-start.sh  prometheus.yml  requirements.txt  setup.sh  start-dev-server.sh
.docker-templates/: NODEJS_USER_SETUP.md  validate-dockerfiles.sh
.github/: CODEOWNERS  auto-review-config.yml  ci-failure-patterns.json  copilot-instructions.md  dependabot.yml  security-policy.yml
.governance/: LANGUAGE_DIMENSION_MAPPING.md  README.md  module-environment-matrix.yml  policies.yaml  registry.yaml
.registry/: module-A.yaml  module-contracts-l1.yaml  schema.json
MateChat-dev/: README.md  biome.json  package.json  pnpm-lock.yaml
advanced-system-src/: Dockerfile  Dockerfile.api  PHASE2_IMPROVEMENTS.md  README.md  package.json  (+3 more)
autonomous-system/architecture-stability/: CMakeLists.txt  README.md  flight_controller.cpp  package.xml
(+495 files in other folders)
